network-skeleton/public_route_table.tf
# ==============================
# public route table 
#===============================

resource "aws_route_table" "public_route_table" {
  vpc_id = aws_vpc.dev_vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id

  }
  tags = merge(
    local.common_tags,
    {
      Name = "${var.environment}-public-route-table"
    }
  )
}

# =========================================
# PUBLIC SUBNET AZ1 ASSOCIATION
# =========================================

resource "aws_route_table_association" "public_subnet_az1_association" {
  subnet_id      = aws_subnet.public_subnet_az1.id
  route_table_id = aws_route_table.public_route_table.id
}


# =========================================
# PUBLIC SUBNET AZ2 ASSOCIATION
# =========================================

resource "aws_route_table_association" "public_subnet_az2_association" {
  subnet_id      = aws_subnet.public_subnet_az2.id
  route_table_id = aws_route_table.public_route_table.id
}
